Revision history for HTML::FormWidgets

0.18.391 2013-04-18
         - Pass in just loc method not whole of view object
         - Stopped leakage in __inject

0.17.389 2013-02-17
         - Fixed tests to not depend on hash ordering

0.17.387 2012-11-13
         - Updated inc::Bob to 1.7. Removed defined ors

0.17.386 2012-11-07
         - Updated inc::Bob to 1.6
         - Passwords can now auto reveal

0.16.381 2012-10-28
         - Replaced Syntax::Highlight::Perl with PPI::HTML
         - Textareas can have literal js in the inputs js config group
         - Can pass scalars as well as hash refs as config to add_literal_js

0.15.377 2012-10-20
         - Harded coded element class to server in Async
         - Re-added setting the outer div width for Cloud

0.14.373 2012-10-13
         - Only localise our own text, not text passed in
         - Refactored the calling of the localisation method
         - Refactored the initialisation of the options hash
         - Changed flds attr to fields in Table
         - Add TableRow type to support LiveGrids
         - Bug fix data lookup in Template
         - Added modalDialogs to Chooser

0.14.370 2012-09-05
         - Add POD spelling test
         - Updated inc::Bob to 1.5

0.14.368 2012-07-10
         - Container now wraps whole of widget
         - Replaced ajaxid with check_field
         - Slider adds numeric class to textfield
         - Date no longer wraps buttons in a span. Fixes vertical alignment
         - Textarea now has mandatory rows and cols. Thanks W3C
         - Added class per cell in tables
         - Better classing for table cells
         - Made _init_options more efficient

0.13.358 2012-04-19
         - Turned CPAN testing on
         - Added more tests
         - Enhanced H::F::Cloud API
         - Bumped HTML::Accessor version dependency to 0.7
         - Updated inc::Bob to 1.3
         - Updated inc::Bob to 1.2

0.12.351 2012-03-29
         - Upped min Perl ver to 5.10