@@ -1,6 +1,7 @@
 Revision history for HTML::FormWidgets
 
 0.18.391 2013-04-18
+         - Updated prereqs in Build.PL
          - Pass in just loc method not whole of view object
          - Stopped leakage in __inject
 
